fixed buttons on mobile

--- a/Sogo/style.css
+++ b/Sogo/style.css
@@ -47,6 +47,7 @@ button
   font-size: 4vh;
   text-align: center;
   max-width:80%;
+  touch-action: auto;
 }
 
 input 
